--- a/package.json
+++ b/package.json
@@ -2,16 +2,30 @@
   "name": "hurricane",
   "module": "index.ts",
   "type": "module",
+  "packageManager": "^bun@1.1.33",
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
+    "@eslint/js": "^9.13.0",
     "@types/bun": "latest",
-    "husky": "^9.1.6"
+    "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.11.0",
+    "husky": "^9.1.6",
+    "prettier": "3.3.3",
+    "typescript-eslint": "^8.12.2"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "scripts": {
-    "prepare": "husky"
+    "prepare": "husky",
+    "build": "bun build . --outdir dist"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
