refactor: readd install and move repo specification

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -7,7 +7,7 @@ on:
   release:
     types: [created]
   workflow_dispatch: 
-    
+
 
 jobs:
   build:
@@ -40,8 +40,7 @@ jobs:
         with:
           # The version of Bun to install. (e.g. "latest", "canary", "1.0.0", "1.0.x", <sha>)
           bun-version: latest
-          # The URL of the package registry to use for installing Bun. Set the $BUN_AUTH_TOKEN environment variable to authenticate with the registry.
-          registry-url: https://npm.pkg.github.com/
+      - run: bun install --frozen-lockfile
       - run: bun publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
