fix: husky not in path for ci

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "typescript": "^5.0.0"
   },
   "scripts": {
-    "prepare": "husky",
+    "prepare": "bunx husky",
     "build": "bun build . --outdir dist",
     "lint": "eslint"
   },
