--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -43,4 +43,4 @@ jobs:
       - run: bun install
       - run: bun publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          BUN_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
