--- a/package.json
+++ b/package.json
@@ -1,33 +1,41 @@
 {
   "name": "@boltsocial/hurricane",
-  "module": "index.ts",
-  "type": "module",
   "version": "0.0.1",
-  "packageManager": "^bun@1.1.33",
+  "main": "dist/index.js",
+  "module": "index.ts",
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.13.0",
     "@types/bun": "latest",
+    "@types/figlet": "^1.7.0",
+    "cli-spinners": "^3.2.0",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.11.0",
     "husky": "^9.1.6",
     "prettier": "3.3.3",
+    "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.2"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "scripts": {
-    "prepare": "bunx husky",
-    "build": "bun build . --outdir dist",
-    "lint": "eslint"
   },
   "lint-staged": {
     "*.ts": [
       "eslint --fix",
       "prettier --write"
     ]
+  },
+  "packageManager": "^bun@1.1.33",
+  "scripts": {
+    "prepare": "bunx husky",
+    "build": "bun build.ts",
+    "build:declaration": "bunx tsc src/* --emitDeclarationOnly --declaration --noCheck --outDir dist",
+    "lint": "eslint"
+  },
+  "type": "module",
+  "types": "dist/index.d.ts",
+  "dependencies": {
+    "chalk": "^5.3.0",
+    "figlet": "^1.8.0",
+    "ora": "^8.1.0"
   }
 }
