--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -42,7 +42,11 @@ jobs:
           registry-url: https://npm.pkg.github.com/
 
           scope: '@boltsocial'
+      - uses: actions/setup-node@v4
+        with:
+          node-version: latest
+          registry-url: https://npm.pkg.github.com/
       - run: bun install --frozen-lockfile
-      - run: bun publish
+      - run: npm publish
         env:
-          NPM_CONFIG_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
