--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,12 +1,11 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Node.js Package
+name: Publish
 
 on:
   release:
     types: [created]
-  workflow_dispatch:
 
 jobs:
   build:
@@ -48,6 +47,7 @@ jobs:
           node-version: latest
           registry-url: https://npm.pkg.github.com/
       - run: bun install --frozen-lockfile
+      - run: bun run build
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
