--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -6,6 +6,7 @@ name: Publish
 on:
   release:
     types: [created]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -22,6 +23,14 @@ jobs:
       - run: bun install --frozen-lockfile
       - run: bun test
       - run: bun run build
+
+  manual-approval:
+    environment: 'Production'
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    steps:
+      - run: echo "Approved to Prod"
 
   publish-gpr:
     needs: build
@@ -43,7 +52,6 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: latest
-          registry-url: https://npm.pkg.github.com/
       - run: bun install --frozen-lockfile
       - run: bun run build
       - run: npm publish
