feat: manual approval

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -33,7 +33,8 @@ jobs:
       - run: echo "Approved to Prod"
 
   publish-gpr:
-    needs: build
+    needs: 
+      - manual-approval
     runs-on: ubuntu-latest
     permissions:
       contents: read
