--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -52,9 +52,10 @@ jobs:
           scope: '@boltsocial'
       - uses: actions/setup-node@v4
         with:
-          node-version: latest
+          node-version: latest 
+          registry-url: 'https://registry.npmjs.org' 
       - run: bun install --frozen-lockfile
       - run: bun run build
-      - run: npm publish
+      - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NODE_AUTH_TOKEN}}
