--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -56,6 +56,6 @@ jobs:
           registry-url: 'https://registry.npmjs.org' 
       - run: bun install --frozen-lockfile
       - run: bun run build
-      - run: npm publish --access public
+      - run: npm publish --access public --provenance
         env:
           NODE_AUTH_TOKEN: ${{secrets.NODE_AUTH_TOKEN}}
