--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "husky": "^9.1.6",
     "prettier": "3.3.3",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.12.2"
+    "typescript-eslint": "^8.12.2",
+    "chalk": "^5.3.0",
+    "figlet": "^1.8.0",
+    "ora": "^8.1.0"
   },
   "lint-staged": {
     "*.ts": [
@@ -32,10 +35,5 @@
     "lint": "eslint"
   },
   "type": "module",
-  "types": "dist/index.d.ts",
-  "dependencies": {
-    "chalk": "^5.3.0",
-    "figlet": "^1.8.0",
-    "ora": "^8.1.0"
-  }
+  "types": "dist/index.d.ts"
 }
