--- a/package.json
+++ b/package.json
@@ -35,5 +35,6 @@
     "lint": "eslint"
   },
   "type": "module",
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "license": "MIT"
 }
