--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,6 +1,3 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
-
 name: Publish
 
 on:
@@ -10,21 +7,20 @@ on:
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Setup Bun
-        # You may pin to the exact commit or the version.
-        # uses: oven-sh/setup-bun@4bc047ad259df6fc24a6c9b0f9a0cb08cf17fbe5
         uses: oven-sh/setup-bun@v2
         with:
-          # The version of Bun to install. (e.g. "latest", "canary", "1.0.0", "1.0.x", <sha>)
           bun-version: latest
       - run: bun install --frozen-lockfile
       - run: bun test
       - run: bun run build
 
-  publish-gpr:
+  deploy-production:
+    name: Deploy / Production
     environment: 'Production'
     needs: 
       - build
@@ -35,13 +31,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Setup Bun
-        # You may pin to the exact commit or the version.
-        # uses: oven-sh/setup-bun@4bc047ad259df6fc24a6c9b0f9a0cb08cf17fbe5
         uses: oven-sh/setup-bun@v2
         with:
-          # The version of Bun to install. (e.g. "latest", "canary", "1.0.0", "1.0.x", <sha>)
           bun-version: latest
-
           scope: '@boltsocial'
       - uses: actions/setup-node@v4
         with:
