--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -17,7 +17,11 @@ jobs:
           bun-version: latest
       - run: bun install --frozen-lockfile
       - run: bun test
-      - run: bun run build
+      - run: bun pm pack
+      - uses: actions/upload-artifact@v4
+        with:
+          name: package-tarball
+          path: boltsocial-*.tgz
 
   deploy-production:
     name: Deploy / Production
@@ -40,7 +44,9 @@ jobs:
           node-version: latest 
           registry-url: 'https://registry.npmjs.org' 
       - run: bun install --frozen-lockfile
-      - run: bun run build
-      - run: npm publish --access public --provenance
+      - uses: actions/download-artifact@v4
+        with:
+          name: package-tarball
+      - run: npm publish boltsocial-*.tgz --access public --provenance
         env:
           NODE_AUTH_TOKEN: ${{secrets.NODE_AUTH_TOKEN}}
