fix: missing repository

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.1",
   "main": "dist/index.js",
   "module": "index.ts",
+  "repository": {
+    "url": "https://github.com/boltsocial/hurricane"
+  },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
