--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@boltsocial/hurricane",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "main": "dist/index.js",
   "module": "index.ts",
   "repository": {
@@ -12,17 +12,18 @@
     "@eslint/js": "^9.13.0",
     "@types/bun": "latest",
     "@types/figlet": "^1.7.0",
+    "chalk": "^5.3.0",
     "cli-spinners": "^3.2.0",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
+    "figlet": "^1.8.0",
     "globals": "^15.11.0",
     "husky": "^9.1.6",
+    "ora": "^8.1.0",
     "prettier": "3.3.3",
+    "rollup": "^4.25.0",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.12.2",
-    "chalk": "^5.3.0",
-    "figlet": "^1.8.0",
-    "ora": "^8.1.0"
+    "typescript-eslint": "^8.12.2"
   },
   "lint-staged": {
     "*.ts": [
@@ -39,5 +40,9 @@
   },
   "type": "module",
   "types": "dist/index.d.ts",
+  "exports": {
+    "import": "./dist/index.js",
+    "require": "./dist/index.cjs"
+  },
   "license": "MIT"
 }
